versioned_docs/version-1.1.0/quick_start.md
---
id: quick_start
title: Quick Start
---

To start a new task locally, in development mode follow these steps:


## 1. Start your new task from our template repository

The simplest way to get started is creating a new repository using Honeycomb as a template.

Go to https://github.com/brown-ccv/honeycomb and click on `Use this template` on the top right. Then select the organization and the name of your repository and click on `create repository from template`

Alternatively, you can use GitHub CLI to create a new project based on the Honeycomb template repository. First, install GitHub CLI (https://cli.github.com/), then simply run on your terminal: 

```
gh repo create your-new-task-name --template brown-ccv/honeycomb
``` 

You can now move into the directory that was just created

```
cd your-new-task-name
```

## 2. Change name and description

Update the `package.json` fields to reflect your app name and description, e.g. `name`, `author`, `repository`

## 3. Install the dependencies. 

**Electron Dependencies**
Honeycomb relies on Electron to package the cross-platform desktop applications. Before starting, you will need to install Electron's pre-requisites. You can find instructions [here](https://www.electronjs.org/docs/development) for your specific OS

**Honeycomb npm packages**
Once [Node.js](https://nodejs.org/en/download/) is installed you will able to use `npm` commands in the terminal. To install the dependencies for HoneyComb run the following command at the terminal (remember you need `cd your-new-task-name` before)

```
npm install
```

## 4. Run the task in dev mode

To launch an electron window with the task with the inspector open to the console and will hot-reload when changes are made to the app

**For Mac and Linux:
```
npm run dev
```

**For Windows:
You will need to open 2 terminals. In the first -and make sure you are in the `task-<TASK NAME>` repo directory- run the command:

```
npm start
```

In the second terminal -  make sure you are in the `task-<TASK NAME>` repo directory-, run:

```
npm run electron-dev
```

## 5. Check out the data

The data is saved throughout the task to the users's app directory.  This is logged at the beginning of the task wherever you ran `npm run dev` (for windows, instead in two different terminals ran `npm start` and `npm run electron-dev`). It is also stored in a folder that is generated by the app, which should be found on the desktop.

## 6. Quit The Task

If you want to quit in the middle of the task, you can use these keyboard shortcuts:
```
Ctrl+W (for PC/Windows)
```
```
Cmd+Q (for Mac)
```
Partial data will be saved.

## 7. Merge updates from honeycomb template repo

Honeycomb is an active project, and will be updated with new features over time. To merge the honeycomb template repository updates with your task, follow the following steps:
First time only:
```
git remote add honeycomb https://github.com/brown-ccv/honeycomb.git
```
Every time: 
```
git fetch --all
```
```
git merge honeycomb/main --allow-unrelated histories
```
If there are any conflicts:
```
git stash
```
To merge:
```
git commit -a -m "merge honeycomb latest"
```
